feat: adding the feature extraction for 28 features out of the preprocessed data

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-data/*
+data_raw/*
 !.gitkeep
 
-processed/*
+data_processed/*
 !.gitkeep
 
-filtered/*
+data_filtered/*
 !.gitkeep
 
 data_batches/*/
